add a form to the html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <title>Let's Go to the Movies!!</title>
   </head>
   <body>
-    
+    <h1>Pick a Movie</h1>
+    <form class="ticketInfo" action="index.html" method="post">
+      <select class="" name="">
+        <option value="">Flubber</option>
+        <option value="">Jumanji</option>
+        <option value="">Mrs. Doubtfire</option>
+        <option value="">Good Will Hunting</option>
+      </select>
+      <label for="">Enter your name:</label>
+      <input type="text" id="name">
+      <label for="">Enter your age:</label>
+      <input type="number" id="age">
+      <label for="">Pick a date</label>
+      <input type="date" id="date">
+    </form>
   </body>
 </html>
